--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<a href="https://bibars-one-piece.github.io/index.html" target="_blank"><img src="decor\press.gif"></a><h4 color="#FFA500">To find the lost - One Piece</h4>
 		<marquee  direction="left" width="100%" scrollamount="20">
 		<img src="decor\krug.png">
-		<img src="decor\sonic.gif" class="rotate">
+		<a href="https://www.sonicthehedgehog.com" target="_blank"><img src="decor\sonic.gif" class="rotate"></a>
 		<img src="decor\mouse.gif">
-		<img src="decor\zombie.gif"class="rotate">
+		<a href="https://www.minecraft.net/ru-ru" target="_blank"><img src="decor\zombie.gif"class="rotate"></a>
 		<img src="decor\sign.png" width="90px" class="rotate">
 		</marquee>
 		</div>
