--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>World of Goo</title>
+	<title>Zombig - World of Goo</title>
 	<link rel="stylesheet" href="goo-style.css">
 	<link rel="shortcut icon" href="icon.ico" type="image/x-icon">
 </head>
