--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	
 	<div class="verh">
-		<a href="https://bibars-one-piece.github.io/index.html" target="_blank"><img src="decor\press.gif"></a><h4 color="#FFA500">To find the lost - One Piece</h4>
+		<a href="https://lektop160.github.io/index.html" target="_self"><img src="decor\press.gif"></a><h4 color="#FFA500">To find the lost - One Piece</h4>
 		<marquee  direction="left" width="100%" scrollamount="20">
 		<img src="decor\krug.png">
 		<a href="https://www.sonicthehedgehog.com" target="_blank"><img src="decor\sonic.gif" class="rotate"></a>
